test: Add ProfileCheckerTest and Refine @PostConst